# opencv-project-team_4

./: .gitignore  CMakeLists.txt
ImageEditorQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
opencv-project-team_4/: opencv-project-team_4.slnx
opencv-project-team_4/application_Team4/: CannyFilter.cpp  CannyFilter.h  ClosingFilter.cpp  ClosingFilter.h  CreativeEffectsWindow.cpp  CreativeEffectsWindow.h  DeepLearningWindow.cpp  DeepLearningWindow.h  DeepLearningWindow.ui  DilationFilter.cpp  DilationFilter.h  DragAndDropWindow.cpp  DragAndDropWindow.h  DragAndDropWindow.ui  DragDropCannyEdge.cpp  DragDropCannyEdge.h  DragDropCannyEdge.ui  DriveDataser.txt  ErosionFilter.cpp  ErosionFilter.h  GeometricTransform.cpp  GeometricTransform.ui  HistogramEqualization.cpp  HistogramEqualization.h  HistogramEqualization.ui  InteractiveToolsWindow.cpp  InteractiveToolsWindow.h  MorphologyWindow.cpp  MorphologyWindow.h  MorphologyWindow.ui  OpeningFilter.cpp  OpeningFilter.h  PanoramaStitching.cpp  PanoramaStitching.ui  QTMainWindow.cpp  QTMainWindow.h  QTMainWindow.ui  README — Multimedia Image Processin.txt  StartInterface.cpp  StartInterface.h  (+11 more)
opencv-project-team_4/opencv-project-team_4/: GeometricTransform.cpp  GeometricTransform.h  GeometricTransform.ui  PanoramaStitching.h  PanoramaStitching.ui  StartInterface.cpp  StartInterface.h  StartInterface.ui  VideoProcessing.cpp  VideoProcessing.h  VideoProcessing.ui  (+4 more)
src/: creative_effects.cpp  creative_effects.hpp  interactive_tools.cpp  interactive_tools.hpp  main.cpp  thresholding.cpp  thresholding.hpp
(+19 files in other folders)
